crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_attribute-2.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: attribute(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 5,
            line: 1,
            fragment: "",
            extra: (),
        },
        KeyValue(
            "hello",
            None,
        ),
    ),
)
