crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_attribute-3.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: attribute(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 25,
            line: 1,
            fragment: "",
            extra: (),
        },
        KeyValue(
            "hello",
            Some(
                Literal(
                    "hello world",
                ),
            ),
        ),
    ),
)
