crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_attribute-4.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 1,
                    length: 34,
                },
                node_type: Element(
                    Element {
                        tag: "div",
                        attrs: [
                            KeyValue(
                                "hello",
                                Some(
                                    Literal(
                                        "hello world",
                                    ),
                                ),
                            ),
                        ],
                        children: [],
                    },
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
        comptime: None,
    },
)
