crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_attribute-6.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 1,
                    length: 23,
                },
                node_type: Element(
                    Element {
                        tag: "div",
                        attrs: [
                            KeyValue(
                                "hello",
                                Some(
                                    JavaScript(
                                        BRACKET_EXPR@0..6
                                          NAME_REF@0..3
                                            IDENT@0..3 "ctx"
                                          L_BRACK@3..4 "["
                                          LITERAL@4..5
                                            NUMBER@4..5 "1"
                                          R_BRACK@5..6 "]"
                                        ,
                                    ),
                                ),
                            ),
                        ],
                        children: [],
                    },
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
        comptime: None,
    },
)
