crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_attribute-7.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 1,
                    length: 30,
                },
                node_type: Element(
                    Element {
                        tag: "div",
                        attrs: [
                            EventHandler(
                                EventHandler {
                                    event: "click",
                                    expr: ARROW_EXPR@0..12
                                      PARAMETER_LIST@0..2
                                        L_PAREN@0..1 "("
                                        R_PAREN@1..2 ")"
                                      WHITESPACE@2..3 " "
                                      FAT_ARROW@3..5 "=>"
                                      WHITESPACE@5..6 " "
                                      ASSIGN_EXPR@6..12
                                        NAME_REF@6..7
                                          IDENT@6..7 "x"
                                        WHITESPACE@7..8 " "
                                        PLUSEQ@8..10 "+="
                                        WHITESPACE@10..11 " "
                                        LITERAL@11..12
                                          NUMBER@11..12 "1"
                                    ,
                                },
                            ),
                        ],
                        children: [],
                    },
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
        comptime: None,
    },
)
