crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_attribute-8.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: attribute(input.into())
---
Err(
    Failure(
        Report(
            Report {
                diagnostics: [
                    Diagnostic {
                        msg: "parser error: invalid character, expected {",
                        severity: Error,
                        helpers: [
                            Helper {
                                msg: "here",
                                span: 12..13,
                            },
                        ],
                        offset: 12,
                        note: Some(
                            "expected because event handlers must always have curly braces as their values",
                        ),
                    },
                ],
            },
        ),
    ),
)
