crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_attribute-9.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: attribute(input.into())
---
Err(
    Failure(
        Report {
            errors: [
                ParseError {
                    fragment: LocatedSpan {
                        offset: 6,
                        line: 1,
                        fragment: "",
                        extra: (),
                    },
                    err_type: ExpectedCharacter(
                        '=',
                    ),
                },
            ],
        },
    ),
)
