crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_bindings-2.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 13,
            length: 1,
        },
        help: None,
        err_type: Expected(
            "a colon",
        ),
    },
)
